--- a/actualizacionEstados/src/main/resources/application.properties
+++ b/actualizacionEstados/src/main/resources/application.properties
@@ -5,3 +5,17 @@ server.port=8082
 
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=package-group
+spring.kafka.consumer.auto-offset-reset=earliest
+
+
+
+spring.datasource.driver-class-name = com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url = jdbc:sqlserver://localhost;databaseName=ActualizacionEstados;TrustServerCertificate=True
+spring.datasource.username = sa
+spring.datasource.password = 123456789
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServerDialect
