--- a/gestionPaquetes/src/main/resources/application.properties
+++ b/gestionPaquetes/src/main/resources/application.properties
@@ -3,3 +3,17 @@ spring.application.name=gestionPaquetes
 server.port=8081
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=package-group
+spring.kafka.consumer.auto-offset-reset=earliest
+
+
+
+spring.datasource.driver-class-name = com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url = jdbc:sqlserver://localhost;databaseName=GestionPaquetes;TrustServerCertificate=True
+spring.datasource.username = sa
+spring.datasource.password = 123456789
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServerDialect
