--- a/actualizacionEstados/src/main/resources/application.properties
+++ b/actualizacionEstados/src/main/resources/application.properties
@@ -10,6 +10,9 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=package-group
 spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
 
 
 
