--- a/apiGatewayPaquetes/src/main/resources/application.properties
+++ b/apiGatewayPaquetes/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=apiGatewayPaquetes
 
+spring.main.web-application-type=reactive
 
 server.port=8080
 
@@ -11,4 +12,5 @@ spring.cloud.gateway.routes[1].id=status-service
 spring.cloud.gateway.routes[1].uri=lb://status-service
 spring.cloud.gateway.routes[1].predicates[0]=Path=/status/**
 
-spring.cloud.discovery.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
