--- a/login/src/main/resources/application.properties
+++ b/login/src/main/resources/application.properties
@@ -7,3 +7,9 @@ jwt.secret = eyJhbGciOiJIUzI1NiJ9.eyJSb2xlIjoiQWRtaW4iLCJJc3N1ZXIiOiJJc3N1ZXIiLC
 server.port=9898
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+
+spring.datasource.driver-class-name = com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url = jdbc:sqlserver://localhost;databaseName=ActualizacionEstados;TrustServerCertificate=True
+spring.datasource.username = sa
+spring.datasource.password = 123456789
